# maia-mixer

./: Makefile.am  bootstrap.sh  configure.ac
data/: Makefile.am  maia-mixer.maia
lib/: Makefile.am
lib/audio/: channel.vala  device.vala  file-mp4.vala  file-mpeg.vala  file.vala  input-port.vala  output-port.vala  port.vala  sample-notification.vala  sample.vala
lib/core/: bpm-detect.vala  buffer.vala  element.vala  engine.vala  error.vala  file-src.vala  gain.vala  input-stream.vala  new-frames-notification.vala  output-stream.vala  player.vala  sample-cache.vala  stream.vala  three-band-eq.vala
lib/ffmpeg/: Makefile.am  file-mp4.vala  file-mpeg.vala  file.vala  init.vala  maia-mixer-ffmpeg.backend  resample.vala  sample.vala
lib/filters/: bpm-detect.vala  filter.vala  resample.vala  speed.vala  three-band-eq.vala
lib/jack/: Makefile.am  buffer.vala  channel.vala  device.vala  engine.vala  init.vala  input-audio-port.vala  maia-mixer-jack.backend  output-audio-port.vala  port.vala  sample.vala  stream.vala
lib/lv2/: Makefile.am  init.vala  maia-mixer-lv2.backend  three-band-eq.vala
lib/mad/: Makefile.am  file-mpeg.vala  init.vala  maia-mixer-mad.backend  resample.vala  sample.vala  speed.vala
lib/soundtouch/: Makefile.am  bpm-detect.vala  init.vala  maia-mixer-soundtouch.backend  soundtouch-bpm-detect.cpp  soundtouch-bpm-detect.h  soundtouch.cpp  soundtouch.h  speed.vala
src/: Makefile.am  maia-mixer.vala  workspace.vala
src/widgets/: event-sample.vala  input-buffered-port.vala  knob.vala  scope.vala  turntable-player.vala  vu-meter.vala
vapi/: Makefile.am  config.vapi  glib-add.vapi  jack.vapi  libavcodec.vapi  libavformat.vapi  libavutil.vapi  libresample.vapi  libswresample.vapi  lilv.deps  lilv.vapi  lv2-atom.vapi  lv2-buf-size.vapi  lv2-options.vapi  lv2-parameters.vapi  lv2-uri-map.vapi  lv2-urid.vapi  lv2.vapi  mad.vapi  soundtouch-bpm-detect.vapi  soundtouch.vapi  test-ffmpeg.vala
