noinst_DATA = \
    config.vapi \
    glib-add.vapi \
    jack.vapi \
    mad.vapi \
    lilv.vapi \
    lilv.deps \
    lv2.vapi \
    lv2-atom.vapi \
    lv2-buf-size.vapi \
    lv2-options.vapi \
    lv2-parameters.vapi \
    lv2-urid.vapi \
    lv2-uri-map.vapi \
    soundtouch.vapi \
    soundtouch-bpm-detect.vapi \
    libavutil.vapi \
    libavformat.vapi \
    libavcodec.vapi \
    libswresample.vapi

EXTRA_DIST = \
    $(noinst_DATA)
